resolving bug fix, add class outlines

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p>Store&nbsp;<input type="text" id="storeIn">
                 &nbsp;Section&nbsp;<input type="text" id="sectionIn">
                 &nbsp;Price&nbsp;$<input type="text" id="priceIn"></p>
-                <button type="button" class="btn btn-primary" onclick="addNew()">Add Item</button>
+                <button type="button"  class="btn btn-primary" onclick="addNew()">Add Item</button>
             </form>
             <br />
         </div>
@@ -51,7 +51,7 @@
         <div class="shopList">
             <table class="table table-striped table-hover" id="tableList">
                 <tr>
-                    <!-- <th id="check"></th> -->
+                    <!-- <th>Status</th> -->
                     <th>Item</th>
                     <th>Quantity</th>
                     <th>Priority</th>
