--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
         <title>Shopping List</title>
     </head>
     <body>
+
+        <script src="backend.js" type="text/javascript"></script>
+        <!-- <script src="model.js" type="text/javascript"></script>
+        <script src="subject.js" type="text/javascript"></script>
+        <script src="view.js" type="text/javascript"></script> -->
+
         <div class="container">
 
     <header>
@@ -16,7 +22,7 @@
             <input type="submit" class="btn btn-default" value="Search">
         </form>
     </header>
-        <br /><br />
+        <br />
 
         <div class="dataEntry">
             <form class="form-inline">
@@ -61,8 +67,7 @@
                 </tr>
             </table>
         </div>
-
         </div>
-    <script src="backend.js" type="text/javascript"></script>
+
     </body>
 </html>
