--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     </head>
     <body>
 
-        <script src="backend.js" type="text/javascript"></script>
         <!-- <script src="model.js" type="text/javascript"></script>
         <script src="subject.js" type="text/javascript"></script>
         <script src="view.js" type="text/javascript"></script> -->
@@ -68,6 +67,6 @@
             </table>
         </div>
         </div>
-
+        <script src="controller.js" type="text/javascript"></script>
     </body>
 </html>
