--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
     <body>
 
         <!-- <script src="model.js" type="text/javascript"></script>
-        <script src="subject.js" type="text/javascript"></script>
         <script src="view.js" type="text/javascript"></script> -->
 
         <div class="container">
 
     <header>
         <h1>Shopping List</h1>
-        <form class="form-inline"></form>
+        <!-- <form class="form-inline"></form>
             <input type="text">
             <input type="submit" class="btn btn-default" value="Search">
-        </form>
+        </form> -->
     </header>
         <br />
 
@@ -56,7 +55,7 @@
         <div class="shopList">
             <table class="table table-striped table-hover" id="tableList">
                 <tr>
-                    <!-- <th>Status</th> -->
+                    <th>Status</th>
                     <th>Item</th>
                     <th>Quantity</th>
                     <th>Priority</th>
@@ -64,9 +63,10 @@
                     <th>Section</th>
                     <th>Price</th>
                 </tr>
+                <!-- <tbody id="shoppinglist"></tbody> -->
             </table>
         </div>
         </div>
-        <script src="controller.js" type="text/javascript"></script>
+        <script src="backend.js" type="text/javascript"></script>
     </body>
 </html>
