--- a/ShoppingList-br/shopping.html
+++ b/ShoppingList-br/shopping.html
@@ -3,7 +3,7 @@
         <!-- https://www.w3schools.com/bootstrap/bootstrap_get_started.asp -->
         <title>Shopping List</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="shoppingstyle.css">        
+        <!-- <link rel="stylesheet" href="shoppingstyle.css">         -->
     </head>
 
     <body> 
@@ -88,6 +88,9 @@
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="shopping.js?x=2" type=text/javascript></script>
+        <script src="shopping.js" type=text/javascript></script>
+        <script src="view.js" type=text/javascript></script>
+        <script src="model.js" type=text/javascript></script>
+        <script src="controller.js" type=text/javascript></script>
     </body>
 </html>
