--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
             </table>
         </div>
         </div>
+        <script src="model.js" type="text/javascript"></script>
+        <script src="view.js" type="text/javascript"></script>
+        <script src="controller.js" type="text/javascript"></script>
         <script src="backend.js" type="text/javascript"></script>
     </body>
 </html>
