--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
         </div>
 
         <div class="shopList">
-            <table class="table table-striped table-hover" id="tableList">
+            <table class="table table-striped table-hover tablesorter" id="tableList">
                 <tr>
-                    <th>Status</th>
-                    <th>Item</th>
-                    <th>Quantity</th>
-                    <th>Priority</th>
-                    <th>Store</th>
-                    <th>Section</th>
-                    <th>Price</th>
+                    <th onclick="sortTable(0)">Status</th>
+                    <th onclick="sortTable(1)">Item</th>
+                    <th onclick="sortTable(2)">Quantity</th>
+                    <th onclick="sortTable(3)">Priority</th>
+                    <th onclick="sortTable(4)">Store</th>
+                    <th onclick="sortTable(5)">Section</th>
+                    <th onclick="sortTable(6)">Price</th>
                 </tr>
                 <!-- <tbody id="shoppinglist"></tbody> -->
             </table>
@@ -70,6 +70,6 @@
         <script src="model.js" type="text/javascript"></script>
         <script src="view.js" type="text/javascript"></script>
         <script src="controller.js" type="text/javascript"></script>
-        <script src="backend.js" type="text/javascript"></script>
+        <!-- <script src="backend.js" type="text/javascript"></script> -->
     </body>
 </html>
