--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <script src="model.js" type="text/javascript"></script>
         <script src="view.js" type="text/javascript"></script>
         <script src="controller.js" type="text/javascript"></script>
+        <script src="savelocal.js" type="text/javascript"></script>
         <!-- <script src="backend.js" type="text/javascript"></script> -->
     </body>
 </html>
