--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div class="shopList">
             <table class="table table-striped table-hover tablesorter" id="tableList">
                 <tr>
+                <thead>
                     <th onclick="sortTable(0)">Status</th>
                     <th onclick="sortTable(1)">Item</th>
                     <th onclick="sortTable(2)">Quantity</th>
@@ -69,8 +70,8 @@
         </div>
         <script src="model.js" type="text/javascript"></script>
         <script src="view.js" type="text/javascript"></script>
-        <script src="controller.js" type="text/javascript"></script>
         <script src="savelocal.js" type="text/javascript"></script>
+        <script src="controller.js" type="text/javascript"></script>
         <!-- <script src="backend.js" type="text/javascript"></script> -->
     </body>
 </html>
