fresh start with ShoppingApp

--- a/Old Version 2/shopping.html
+++ b/Old Version 2/shopping.html
@@ -77,7 +77,8 @@
             </div>
             <div class="col-md-12">
             <table class="table table-bordered">
-                <thead>
+                <thead> 
+                    <!-- ONTHEAD YOU CAN PUT IN MORE CLASS STYLES -->
                     <tr>
                         <th></th><th>Item</th><th>Quantity</th><th>Store</th><th>Section</th><th>Price</th>
                     </tr>
