updating recent work- colored table

--- a/curr_ShoppingApp/index.html
+++ b/curr_ShoppingApp/index.html
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                     <div class="col-md-12">
-                    <table class="table table-hover" id="tableList">
+                    <table class="table" id="tableList">
                         <thead> 
                             <!-- ONTHEAD YOU CAN PUT IN MORE CLASS STYLES -->
                             <tr>
