--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>My Shopping List</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="shoppingstyles.css">
+        <link rel="stylesheet" href="./css/shoppingstyles.css">
     </head>
 
     <body>
@@ -94,9 +94,9 @@
                 </div>
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
                 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-                <script src="model.js" type=text/javascript></script>
-                <script src="view.js" type=text/javascript></script>
-                <script src="savelocal.js" type=text/javascript></script>
-                <script src="controller.js" type=text/javascript></script>
+                <script src="./js/model.js" type=text/javascript></script>
+                <script src="./js/view.js" type=text/javascript></script>
+                <script src="./js/savelocal.js" type=text/javascript></script>
+                <script src="./js/controller.js" type=text/javascript></script>
             </body>
         </html>
