item class works

--- a/static/index.html
+++ b/static/index.html
@@ -88,7 +88,7 @@
                                 <th onclick="sortTable(5)">Price</th>
                             </tr>
                         </thead>
-                        <tbody id="shoppinglist"></tbody>
+                        <tbody id="shoppingList"></tbody>
                     </table>
                     </div>
                 </div>
