--- a/static/index.html
+++ b/static/index.html
@@ -97,6 +97,7 @@
                 <script src="./js/model.js" type=text/javascript></script>
                 <script src="./js/view.js" type=text/javascript></script>
                 <script src="./js/savelocal.js" type=text/javascript></script>
+                <script src="./js/server.js" type=text/javascript></script>
                 <script src="./js/controller.js" type=text/javascript></script>
             </body>
         </html>
